tests/miniJava/neg/004905_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] java ( int [] java , if int [] java ) { return 0 ; } }
